# SvarunVirtualMachine

./: README.md
src/: CMakeLists.txt  branch.cpp  dataprocessing.cpp  instruction.cpp  main.cpp  memory.cpp
src/include/: branch.h  dataprocessing.h  instruction.h  memory.h  registers.h
